Fix regression causing scrollbars not to be extended by absolutely positioned elements in some cases.  Also removed unused |FixParentAndView|.  b=154230  r=bzbarsky  sr=jst